@@ -1,1 +1,0 @@
-Modelled on Afterstep, all colour gradients are customizable
