@@ -1,1 +1,0 @@
-Baseado en Afterstep, tódolos gradientes de cor son persoalizables
