@@ -1,1 +1,0 @@
-Modellato su Afterstep, tutte le sfumature sono personalizzabili
