@@ -1,2 +1,0 @@
-Afterstep を手本にしていて、すべての色勾配(グラディエント)は
-カスタマイズ可能です。
