@@ -1,1 +1,0 @@
-Wzorowane na Afterstepie, wszystkie gradienty kolorów są ustawialne.
