@@ -1,3 +1,6 @@
+2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* themes/gradient/: removed
+
 2011-05-22  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/frames.jl: fixed setting frame-font colors for
 	states inactive-highlighted and inactive-clicked
